--- a/tomcat-image/Dockerfile
+++ b/tomcat-image/Dockerfile
@@ -6,4 +6,4 @@ ADD https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.81/bin/apache-tomcat-8.5.81.ta
 RUN ls ./
 RUN tar -xzf ./tomcat-apache.tar.gz -C /opt/
 EXPOSE 8080
-CMD ["/opt/apache-tomcat-8.5.81/bin/catalina.sh","start"]
+CMD ["/opt/apache-tomcat-8.5.81/bin/catalina.sh","run"]
